@@ -165,6 +165,7 @@ StartCommand() {
         -XX:HeapDumpPath="$VESPA_HOME/var/crash" \
         -XX:OnOutOfMemoryError='kill -9 %p' \
         --illegal-access=warn \
+        --add-opens=java.base/java.io=ALL-UNNAMED \
         --add-opens=java.base/java.lang=ALL-UNNAMED \
         --add-opens=java.base/java.net=ALL-UNNAMED \
         --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED \
